[gd_scene load_steps=2 format=3 uid="uid://csq0gw4h5oj7c"]

[ext_resource type="Script" uid="uid://dh0q7o4nkdarq" path="res://Scripts/settings_window.gd" id="1_t8tf3"]

[node name="SettingsWindow" type="Node2D"]
script = ExtResource("1_t8tf3")

[node name="Back" type="Button" parent="."]
offset_left = 5.0
offset_top = 992.0
offset_right = 180.0
offset_bottom = 1069.0
text = "Back"

[node name="NameLabel" type="RichTextLabel" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 225.0
offset_bottom = 75.0
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 30
text = "Player name:"
vertical_alignment = 1

[node name="PlayerName" type="LineEdit" parent="."]
offset_left = 225.0
offset_top = 25.0
offset_right = 625.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 30

[node name="PlayerChatColorLabel" type="RichTextLabel" parent="."]
offset_left = 25.0
offset_top = 85.0
offset_right = 325.0
offset_bottom = 135.0
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 30
text = "Player Chat Color"

[node name="PlayerChatColor" type="ColorPickerButton" parent="."]
offset_left = 310.0
offset_top = 90.0
offset_right = 380.0
offset_bottom = 130.0

[node name="PlayerEventColorLabel" type="RichTextLabel" parent="."]
offset_left = 25.0
offset_top = 135.0
offset_right = 325.0
offset_bottom = 185.0
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 30
text = "Player Event Color"

[node name="PlayerEventColor" type="ColorPickerButton" parent="."]
offset_left = 310.0
offset_top = 140.0
offset_right = 380.0
offset_bottom = 180.0

[node name="RivalChatColorLabel" type="RichTextLabel" parent="."]
offset_left = 25.0
offset_top = 185.0
offset_right = 325.0
offset_bottom = 235.0
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 30
text = "Rival Chat Color"

[node name="RivalChatColor" type="ColorPickerButton" parent="."]
offset_left = 310.0
offset_top = 190.0
offset_right = 380.0
offset_bottom = 230.0

[node name="RivalEventColorLabel" type="RichTextLabel" parent="."]
offset_left = 25.0
offset_top = 235.0
offset_right = 325.0
offset_bottom = 285.0
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 30
text = "Rival Event Color"

[node name="RivalEventColor" type="ColorPickerButton" parent="."]
offset_left = 310.0
offset_top = 240.0
offset_right = 380.0
offset_bottom = 280.0

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="PlayerName" to="." method="_on_player_name_text_changed"]
[connection signal="color_changed" from="PlayerChatColor" to="." method="_on_player_chat_color_color_changed"]
[connection signal="color_changed" from="PlayerEventColor" to="." method="_on_player_event_color_color_changed"]
[connection signal="color_changed" from="RivalChatColor" to="." method="_on_rival_chat_color_color_changed"]
[connection signal="color_changed" from="RivalEventColor" to="." method="_on_rival_event_color_color_changed"]
